# esp32p4-rust

./: Cargo.toml  Makefile  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
components/display_init/: CMakeLists.txt  display_init.c
components/display_init/include/: display_init.h
components/esp_lcd_jd9165/: CMakeLists.txt  esp_lcd_jd9165.c
components/touch_gt911/: CMakeLists.txt  esp_lcd_touch.c  esp_lcd_touch_gt911.c  touch_init.c
components/touch_gt911/include/: esp_lcd_touch.h  esp_lcd_touch_gt911.h  touch_init.h
doc/: esp32p4_desk_stand.stl
src/: control.rs  logger.rs  main.rs
src/display/: ffi.rs  framebuffer.rs  mod.rs
src/gsm/: mod.rs
src/mqtt/: mod.rs
src/platform/: mod.rs
src/rc_devices/: device.rs  mod.rs  store.rs
src/rf_receiver/: mod.rs
src/screens/: logs.rs  mod.rs  mqtt.rs  rc_devices.rs  security.rs  settings.rs  sim.rs  wifi.rs
src/touch/: mod.rs
src/wifi/: mod.rs
ui/: app.slint  keyboard.slint  lock_screen.slint  log_screen.slint  mqtt_screen.slint  rc_devices_screen.slint  settings_screen.slint  sim_screen.slint  wifi_screen.slint
