[package]
name = "security"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "security"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section"] }

[build-dependencies]
embuild = "0.33"
